--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							data-srcset="
 								assets/imgs/cartao_visita.webp 320w,
 								assets/imgs/cartao_visita.jpeg 320w"
-							height="200" width="378"
+							height="200"
 							title="Osteopata e Homeopata - Dr. Mesquita de Sousa" alt="Osteopata e Homeopata - Dr. Mesquita de Sousa"
 						/>
 						</div>
