Update button css

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<p class="tagline">Com cerca de 20 anos de experiência em Medicina Alternativa, o Dr. Mesquita de Sousa encontra-se em Lisboa a realizar consultas de Osteopatia, Homeopatia, Naturopatia e Iridologia no seu próprio consultório.</p>
 						</section>
 
-						<div class="content-box botao_consultas">
+						<div class="content-box botao_consultas inner">
 							<a href="#consulta" target="_blank" rel="noopener" onclick="gtag('event', 'select_content', {'event_category': 'buttons', 'event_label': 'Consulta'});">
 								<img
 									class="lazyload"
