--- a/index.html
+++ b/index.html
@@ -66,7 +66,32 @@
 			<div class="content-wrapper">
 				<!-- MAIN CONTENT -->
 				<div class="center outer">
-					<div class="intro_background">
+					<div class="intro-background">
+						<div class="background">
+							<img
+								class="lazyload"
+								src="assets/imgs/cartao_visita.jpeg"
+								data-src="assets/imgs/cartao_visita.jpeg"
+								data-srcset="
+									assets/imgs/background2_cut.webp 320w,
+									assets/imgs/background2_cut.jpg 320w"
+								title="Osteopata e Homeopata - Dr. Mesquita de Sousa | Background 1" alt="Osteopata e Homeopata - Dr. Mesquita de Sousa | Background 1"
+							/>
+							<img
+								class="lazyload"
+								src="assets/imgs/cartao_visita.jpeg"
+								data-src="assets/imgs/cartao_visita.jpeg"
+								data-srcset="
+									assets/imgs/test_background.webp 320w,
+									assets/imgs/test_background.jpeg 320w"
+								title="Osteopata e Homeopata - Dr. Mesquita de Sousa | Background 2" alt="Osteopata e Homeopata - Dr. Mesquita de Sousa | Background 2"
+							/>
+							<img src="assets/imgs/background3_cut.jpg" />
+
+							<img src="assets/imgs/background4_cut.jpg" />
+
+							<img src="assets/imgs/background5_cut.jpg" />
+						</div>
 						<div class="inner">
 							<img
 							class="logo lazyload"
@@ -75,9 +100,9 @@
 							data-srcset="
 								assets/imgs/cartao_visita.webp 320w,
 								assets/imgs/cartao_visita.jpeg 320w"
-							height="200"
+							height="230"
 							title="Osteopata e Homeopata - Dr. Mesquita de Sousa" alt="Osteopata e Homeopata - Dr. Mesquita de Sousa"
-						/>
+							/>
 						</div>
 
 						<!-- INTRODUCTION -->
@@ -88,7 +113,7 @@
 						</section>
 
 						<div class="content-box botao_consultas inner">
-							<a href="#consulta" target="_blank" rel="noopener" onclick="gtag('event', 'select_content', {'event_category': 'buttons', 'event_label': 'Consulta'});">
+							<a href="#consultas" target="_blank" rel="noopener" onclick="gtag('event', 'select_content', {'event_category': 'buttons', 'event_label': 'Consulta'});">
 								<img
 									class="lazyload"
 									src="assets/imgs/cartao_visita.jpeg"
@@ -105,40 +130,82 @@
 					</div>
 
 					<div class="flex-wrapper">
-						<!-- BULLET POINTS -->
-						<div id="why-join-us" class="snax-pros">
-							<h2 class="section_title">Why join us?</h2>
-							<div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/social/discord-small.svg" data-srcset="" title="Discord" alt="Discord"/>
-									<span>Discord server with the best bots and emotes</span>
+						<!-- TESTEMUNHOS -->
+						<section id="testemunhos">
+							<div class="testemunho-wrapper">
+								<div class="testemunho">
+									<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+										<img src="assets/imgs/yelp.png" height="70" />
+									</a>
+									<hr />
+									<div class="comment">
+										<span>
+											" O consultório é uma autêntica oficina de milagres. "
+										</span>
+										<br />
+										<span class="testemunho-person">
+											- Ana M.
+										</span>
+									</div>
+									<div class="testemunho-source">
+										<span>Fonte:
+											<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+												yelp.pt
+											</a>
+										</span>
+									</div>
 								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/night-events.svg" data-srcset="" title="Night Events" alt="Night Events"/>
-									<span>Weekly game nights featuring games voted for by the community</span>
+
+								<div class="testemunho">
+									<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+										<img src="assets/imgs/yelp.png" height="70" />
+									</a>
+									<hr />
+									<div class="comment">
+										<span>
+											" Sou paciente há vários anos e sempre que saio das longas consultas sinto-me como nova. "
+										</span>
+										<br />
+										<span class="testemunho-person">
+											- Helena C.
+										</span>
+									</div>
+
+
+									<div class="testemunho-source">
+										<span>Fonte:
+											<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+												yelp.pt
+											</a>
+										</span>
+									</div>
 								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/community.svg" data-srcset="" title="Community" alt="Community"/>
-									<span>Awesome community with active friendly members</span>
-								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/games.svg" data-srcset="" title="Games" alt="Games"/>
-									<span>We play dozens of games, both for fun and/or at a competitive level</span>
-								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/agreement.svg" data-srcset="" title="Friends" alt="Friends"/>
-									<span>Everyone is welcome, bring your friends!</span>
-								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/plus-18.svg" data-srcset="" title="Mature" alt="Mature"/>
-									<span>Mature community, being 18+ is encouraged</span>
-								</div>
-								<div class="pro">
-									<img class="lazyload" src="assets/imgs/snaxbanner.png" data-src="assets/imgs/pros/premium-badge.svg" data-srcset="" title="Ranks" alt="Ranks"/>
-									<span>Earn higher ranks the more active you are!</span>
+
+								<div class="testemunho">
+									<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+										<img src="assets/imgs/yelp.png" height="70" />
+									</a>
+									<hr />
+									<div class="comment">
+										<span>
+											" Estava habituada a consultas de 45 minutos em outros locais mas o doutor Mesquita não me "despachou" como noutros consultórios fazem. "
+										</span>
+										<br />
+										<span class="testemunho-person">
+											- Lurdes T.
+										</span>
+									</div>
+
+									<div class="testemunho-source">
+										<span>Fonte:
+											<a href="https://www.yelp.pt/biz/consult%C3%B3rio-dr-mesquita-de-sousa-lisboa" target="_blank" rel="noopener">
+												yelp.pt
+											</a>
+										</span>
+									</div>
 								</div>
 							</div>
-						</div>
+						</section>
 					</div>
 
 					<div class="flex-wrapper prog-games">
